# CaesarEngine

./: .gitignore  CMakeLists.txt  README.md
assets/models/: Cube.glb  Plane.glb  sphere.glb
assets/shaders/: default.frag  default.vert  unlit.frag  unlit.vert
include/: camera.hpp  collision.hpp  debug.hpp  editor.hpp  entity.hpp  gamescene.hpp  globals.hpp  inputs.hpp  light.hpp  mesh.hpp  physics.hpp  player.hpp  renderer.hpp  scene.hpp  shader.hpp  stb_image.h  transform.hpp
source/: camera.cpp  collision.cpp  debug.cpp  editor.cpp  entity.cpp  gamescene.cpp  globals.cpp  inputs.cpp  main.cpp  mesh.cpp  physics.cpp  player.cpp  renderer.cpp  scene.cpp
